# qsp-legacy

./: CMakeLists.txt  QspLegacyConfig.cmake.in  README.MD  qsp_legacy_config.h.cmakein
src/: actions.c  callbacks.h  coding.c  coding.h  common.c  declarations.h  errors.c  errors.h  game.c  game.h  mathops.c  menu.c  objects.c  objects.h  statements.c
src/bindings/: bindings_config.h  qsp.h
src/bindings/default/: default_callbacks.c  default_coding.c  default_control.c  qsp_default.h
src/bindings/jvm/: QSPLegacyLib.java  com_libqsplegacy_jni_QSPLegacyLib.h  jvm_callbacks.c  jvm_control.c  qsp_jvm.h
